# ROS

./: .gitignore  aufgabe2.rviz
aufgabe1/: CMakeLists.txt  package.xml
aufgabe1/launch/: aufgabe1.launch
husky_highlevel_controller/: CMakeLists.txt  package.xml
husky_highlevel_controller/config/: aufgabe2.rviz  config.yaml  map.yaml
husky_highlevel_controller/include/husky_highlevel_controller/: HuskyHighlevelController.hpp  HuskyHighlevelControllerDrive.hpp
husky_highlevel_controller/launch/: husky_highlevel_controller.launch  husky_highlevel_controller_client.launch
husky_highlevel_controller/src/: HuskyHighlevelController.cpp  HuskyHighlevelControllerDrive.cpp  husky_highlevel_controller_drive_node.cpp  husky_highlevel_controller_node.cpp
husky_highlevel_controller_client/: CMakeLists.txt  package.xml
husky_highlevel_controller_client/src/: husky_highlevel_controller_client.cpp
husky_highlevel_controller_drive/: CMakeLists.txt  package.xml
husky_highlevel_controller_drive/include/husky_highlevel_controller_drive/: HuskyHighlevelControllerDrive.hpp
husky_highlevel_controller_drive/src/: HuskyHighlevelControllerDrive.cpp  husky_highlevel_controller_drive_node.cpp
husky_highlevel_controller_msgs/: CMakeLists.txt  package.xml
husky_highlevel_controller_msgs/action/: drive.action
husky_highlevel_controller_msgs/msg/: Position.msg
